--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,9 @@ path = "src/iam-service-lib.rs"
 aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
 aws-sdk-iam = "1.34.0"
 clap = { version = "4.5.8", features = ["derive"] }
+futures = "0.3.30"
+regex = "1.10.5"
+serde = { version = "1.0.204", features = ["derive"] }
+serde_json = "1.0.120"
 tokio = { version = "1", features = ["full"] }
+urlencoding = "2.1.3"
