--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        target: [x86_64-unknown-linux-gnu, x86_64-apple-darwin, x86_64-pc-windows-gnu]
+        target: [x86_64-unknown-linux-gnu, x86_64-apple-darwin, aarch64-apple-darwin, x86_64-pc-windows-gnu]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -23,6 +23,10 @@ jobs:
           target: ${{ matrix.target }}
           override: true
 
+      - name: Install Dependencies
+        if: matrix.target == 'x86_64-pc-windows-gnu'
+        run: sudo apt-get install -y mingw-w64
+
       - name: Build
         run: cargo build --release --target ${{ matrix.target }}
 
@@ -32,8 +36,11 @@ jobs:
             tar -czvf your_cli_tool-linux.tar.gz -C target/${{ matrix.target }}/release your_cli_tool;
             echo "package_name=your_cli_tool-linux.tar.gz" >> $GITHUB_ENV;
           elif [ ${{ matrix.target }} == "x86_64-apple-darwin" ]; then
-            tar -czvf your_cli_tool-macos.tar.gz -C target/${{ matrix.target }}/release your_cli_tool;
-            echo "package_name=your_cli_tool-macos.tar.gz" >> $GITHUB_ENV;
+            tar -czvf your_cli_tool-macos-x86_64.tar.gz -C target/${{ matrix.target }}/release your_cli_tool;
+            echo "package_name=your_cli_tool-macos-x86_64.tar.gz" >> $GITHUB_ENV;
+          elif [ ${{ matrix.target }} == "aarch64-apple-darwin" ]; then
+            tar -czvf your_cli_tool-macos-aarch64.tar.gz -C target/${{ matrix.target }}/release your_cli_tool;
+            echo "package_name=your_cli_tool-macos-aarch64.tar.gz" >> $GITHUB_ENV;
           elif [ ${{ matrix.target }} == "x86_64-pc-windows-gnu" ]; then
             zip your_cli_tool-windows.zip target/${{ matrix.target }}/release/your_cli_tool.exe;
             echo "package_name=your_cli_tool-windows.zip" >> $GITHUB_ENV;
@@ -46,4 +53,3 @@ jobs:
           asset_path: ${{ env.package_name }}
           asset_name: ${{ env.package_name }}
           asset_content_type: application/zip
-
