--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -124,9 +124,12 @@ jobs:
           target: x86_64-apple-darwin
           override: true
 
+      - name: Set Environment Variables
+        run: |
+          echo CARGO_TARGET_X86_64_APPLE_DARWIN_RUSTFLAGS="-C link-arg=-undefined -C link-arg=dynamic_lookup" >> $GITHUB_ENV
+          echo MACOSX_DEPLOYMENT_TARGET=10.7 >> $GITHUB_ENV
+
       - name: Build
-        env:
-          CARGO_TARGET_X86_64_APPLE_DARWIN_RUSTFLAGS: "-C link-arg=-undefined -C link-arg=dynamic_lookup"
         run: cargo build --release --target x86_64-apple-darwin
 
       - name: Package
@@ -159,9 +162,12 @@ jobs:
           target: aarch64-apple-darwin
           override: true
 
+      - name: Set Environment Variables
+        run: |
+          echo CARGO_TARGET_AARCH64_APPLE_DARWIN_RUSTFLAGS="-C link-arg=-undefined -C link-arg=dynamic_lookup" >> $GITHUB_ENV
+          echo MACOSX_DEPLOYMENT_TARGET=10.7 >> $GITHUB_ENV
+
       - name: Build
-        env:
-          CARGO_TARGET_AARCH64_APPLE_DARWIN_RUSTFLAGS: "-C link-arg=-undefined -C link-arg=dynamic_lookup"
         run: cargo build --release --target aarch64-apple-darwin
 
       - name: Package
