--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ aws-sdk-iam = "1.34.0"
 clap = { version = "4.5.8", features = ["derive"] }
 colored = "2.1.0"
 futures = "0.3.30"
+fuzzy-matcher = "0.3.7"
+inquire = "0.7.5"
 regex = "1.10.5"
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
